<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TranslatorApp</string>
    <string name="action_translate">Translate</string>
    <string name="action_import_photo">Take Photo</string>
    <string name="action_import_gallery">Open Gallery</string>
    <string name="action_import_file">Open Text File</string>
    <string name="action_export_clipboard">Copy All</string>
    <string name="status_ocr_optimizing">Optimizing Image…</string>
    <string name="status_ocr_scanning">Scanning…</string>
    <string name="status_translation_waiting">Waiting For Response…</string>
    <string name="status_error_generic">An Error Occurred</string>
    <string name="clear">Clear</string>
    <string name="options_translate_formal">Use formal language</string>
    <string name="options_translate_src">Translate From:</string>
    <string name="options_translate_dst">Translate To:</string>
    <string name="action_save_apikey">Confirm</string>
    <string name="action_test_connection">Test Key</string>
    <string name="hint_apikey">Insert Deepl API key here</string>
    <string name="label_text_import_options">Text import options</string>
    <string name="label_input">Insert the text to translate in the field below</string>
    <string name="label_output">Translated text</string>
    <string name="label_output_placeholder">Translated text will appear here</string>
    <string name="label_usage_data">%1$s / %2$s</string>
    <string name="label_apikey">Insert your DeepL Translate API key in the field below</string>
    <string name="label_usage">Characters used:</string>
    <string name="label_ocr_files">Configure the datasets used to extract text from images</string>
    <string name="fragment_less_than_1">&lt; 1%</string>
    <string name="label_apikey_status">Api Key Status:</string>
    <string name="label_api_plan">Api Plan:</string>
    <string name="label_apikey_info">Api Key and usage details</string>
    <string name="label_apikey_valid">VALID</string>
    <string name="label_apikey_over_limit">USAGE EXCEEDED</string>
    <string name="label_apikey_invalid">INVALID</string>
    <string name="label_usage_unlimited">Unlimited</string>
    <string name="label_plan_free">FREE</string>
    <string name="label_plan_pro">PRO</string>
    <string name="label_usage_perc">Characters used (%):</string>
    <string name="dialog_confirm_download_generic">Download the selected file?</string>
    <string name="dialog_confirm_download_ocr">The data file for the %1$s language is not installed.\nThis file is required to perform character recognition operations.\nDo you want to download it now?</string>
    <string name="dialog_confirm_delete_generic">Delete file?</string>
    <string name="dialog_title_generic">Confirm</string>
    <string name="dialog_action_confirm">Confirm</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="action_from_clipboard_done">Text pasted</string>
    <string name="action_from_clipboard_error_empty">Clipboard is empty</string>
    <string name="action_from_clipboard_error_invalid_content">Clipboard content is not plain text</string>
    <string name="action_translate_done">Translation completed</string>
    <string name="action_translate_error_empty">Input text field is empty</string>
    <string name="action_export_clipboard_done">Copied to clipboard</string>
    <string name="clipboard_entry_name">translated text</string>
    <string name="action_pick_gallery_app">Select gallery app</string>
    <string name="action_pick_file_manager">Select file manager</string>
    <string name="error_generic">An error has occured</string>
    <string name="error_missing_api_key">Translation service API key is empty</string>
    <string name="error_image_parse_init_failed">Unable to initialize image parser</string>
    <string name="error_translation">Unable to execute translation. Verify connectivity and the supplied API key</string>
    <string name="error_thread_interrupted">Service has terminated abruptly</string>
    <string name="error_image_creation">Unable to store temporary image</string>
    <string name="error_file_write">Application does not have storage write permissions</string>
    <string name="action_test_connection_done">Key is valid</string>
</resources>